--- a/model.ipynb
+++ b/model.ipynb
@@ -86,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!unzip Linemod_preprocessed.zip"
+    "!unzip ../Linemod_preprocessed.zip"
    ]
   },
   {
@@ -314,73 +314,35 @@
     "                rotation = np.array(pose['cam_R_m2c'], dtype=np.float32).reshape(3, 3)  # [3x3] ---> rotation matrix\n",
     "                # bbox is top left corner and width and height info, YOLO needs center coordinates and width and height\n",
     "                x_min, y_min, width, height = np.array(pose['obj_bb'], dtype=np.float32) # [4] ---> x_min, y_min, width, height\n",
+    "                # compute initial center\n",
     "                x_center = x_min + width/2\n",
-    "                # if x_center<0 take the max(0,x_center), if x_center>IMG_WIDTH take min(IMG_WIDTH,x_center)\n",
-    "                if x_center < 0:\n",
-    "                    x_center = max(0, x_center)\n",
-    "                elif x_center > IMG_WIDTH:\n",
-    "                    x_center = min(IMG_WIDTH, x_center)\n",
-    "                \n",
     "                y_center = y_min + height/2\n",
+    "\n",
+    "                # move the center when outside image and adjust width and height accordingly\n",
+    "                if x_center < 0:\n",
+    "                    width += 2 * x_center # x_center negative, subtract its absolute value * 2 from width\n",
+    "                    x_center = 0\n",
+    "                elif x_center > IMG_WIDTH:\n",
+    "                    width -= 2 * (x_center - IMG_WIDTH)\n",
+    "                    x_center = IMG_WIDTH\n",
+    "\n",
     "                if y_center < 0:\n",
-    "                    y_center = max(0, y_center)\n",
+    "                    height += 2 * y_center # y_center negative, subtract its absolute value * 2 from height\n",
+    "                    y_center = 0\n",
     "                elif y_center > IMG_HEIGHT:\n",
-    "                    y_center = min(IMG_HEIGHT, y_center)\n",
+    "                    height -= 2 * (y_center - IMG_HEIGHT)\n",
+    "                    y_center = IMG_HEIGHT\n",
+    "                \n",
+    "                # ensure width and height are not negative, this happens when bounding box is completely outside image (it should never happen)\n",
+    "                width = max(0, width)\n",
+    "                height = max(0, height)\n",
+    "                \n",
     "                # store coordinates of the center and width and height of the bounding box normalized to the\n",
     "                # image width=640 pixels and height=480 pixels\n",
     "                bbox = np.array([x_center/IMG_WIDTH, y_center/IMG_HEIGHT, width/IMG_WIDTH, height/IMG_HEIGHT], dtype=np.float32)\n",
     "\n",
     "                obj_id = np.array(pose['obj_id'], dtype=np.float32) # [1] ---> label\n",
     "                break\n",
-    "\n",
-    "        return translation, rotation, bbox, obj_id\n",
-    "    \n",
-    "    def get_bbox_id(self, folder_id, sample_id):\n",
-    "        \"\"\"Get bounding box and object id for the object in this sample.\n",
-    "            It's like load_6d_pose, but in that one only one pose is returned, while here all poses are returned (for instance for training\n",
-    "            YOLO model)\n",
-    "        \"\"\"\n",
-    "        pose_file = os.path.join(self.dataset_root, 'data', f\"{folder_id:02d}\", \"gt.yml\")\n",
-    "\n",
-    "        # Load the ground truth poses from the gt.yml file\n",
-    "        with open(pose_file, 'r') as f:\n",
-    "            pose_data = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "\n",
-    "        # The pose data is a dictionary where each key corresponds to a frame with pose info\n",
-    "        # We assume sample_id corresponds to the key in pose_data\n",
-    "        if sample_id not in pose_data:\n",
-    "            raise KeyError(f\"Sample ID {sample_id} not found in gt.yml for folder {folder_id}.\")\n",
-    "\n",
-    "        translation = []\n",
-    "        rotation = []\n",
-    "        bbox = []\n",
-    "        obj_id = []\n",
-    "        IMG_WIDTH = 640\n",
-    "        IMG_HEIGHT = 480\n",
-    "        for pose in pose_data[sample_id]: # There can be more than one pose per sample\n",
-    "            # Extract translation and rotation\n",
-    "            translation.append(np.array(pose['cam_t_m2c'], dtype=np.float32))  # each element is [3] ---> (x,y,z)\n",
-    "            rotation.append(np.array(pose['cam_R_m2c'], dtype=np.float32).reshape(3, 3))  # each element is [3x3] ---> rotation matrix\n",
-    "            # bbox is top left corner and width and height info, YOLO needs center coordinates and width and height\n",
-    "            x_min, y_min, width, height = np.array(pose['obj_bb'], dtype=np.float32) # [4] ---> x_min, y_min, width, height\n",
-    "            # x_center and y_center can be outside the image, for instance for images that can be partially in the image\n",
-    "            x_center = x_min + width/2\n",
-    "            # if x_center<0 take the max(0,x_center), if x_center>IMG_WIDTH take min(IMG_WIDTH,x_center)\n",
-    "            if x_center < 0:\n",
-    "                x_center = max(0, x_center)\n",
-    "            elif x_center > IMG_WIDTH:\n",
-    "                x_center = min(IMG_WIDTH, x_center)\n",
-    "            \n",
-    "            y_center = y_min + height/2\n",
-    "            if y_center < 0:\n",
-    "                y_center = max(0, y_center)\n",
-    "            elif y_center > IMG_HEIGHT:\n",
-    "                y_center = min(IMG_HEIGHT, y_center)\n",
-    "            # store coordinates of the center and width and height of the bounding box normalized to the\n",
-    "            # image width=640 pixels and height=480 pixels\n",
-    "            bbox.append(np.array([x_center/IMG_WIDTH, y_center/IMG_HEIGHT, width/IMG_WIDTH, height/IMG_HEIGHT], dtype=np.float32))\n",
-    "\n",
-    "            obj_id.append(np.array(pose['obj_id'], dtype=np.float32)) # each element is [1] ---> label\n",
     "\n",
     "        return translation, rotation, bbox, obj_id\n",
     "\n",
@@ -560,7 +522,7 @@
    "id": "8ca3c7b5",
    "metadata": {},
    "source": [
-    "Create the folders. Note that each image may contain multiple objects. For instance in ```data/02/gt.yml``` for one image there are multiple objects"
+    "Create the folders. Note that each image may contain multiple objects. For instance in ```data/02/gt.yml``` for one image there are multiple objects, but just consider the object of that class"
    ]
   },
   {
@@ -593,11 +555,11 @@
     "    print(f\"------------------------------{folder_names[idx].upper()}------------------------------\")\n",
     "    os.makedirs(f\"../YOLO/datasets/{folder_names[idx]}/images\", exist_ok=True)\n",
     "    os.makedirs(f\"../YOLO/datasets/{folder_names[idx]}/labels\", exist_ok=True)\n",
-    "    classCount = {temp_class: 0 for temp_class in range(0,number_classes)} # initialize dictionary for counting\n",
+    "    classCount = {label_object: 0 for label_object in index_dict.keys()} # initialize dictionary for counting\n",
     "    total = 0 # used to normalize count\n",
     "    for el in tqdm(dataset, desc=\"Moving...\"):\n",
     "        # el is (folderId, sampleId)\n",
-    "        _, _, bbox, obj_id = train_dataset.get_bbox_id(el[0], el[1])\n",
+    "        _, _, bbox, obj_id = train_dataset.load_6d_pose(el[0], el[1])\n",
     "        # copy image into the new folder\n",
     "        # avoid overwriting the files, so concat also the name of the folderId to the destination file\n",
     "        shutil.copy(f\"./Linemod_preprocessed/data/{el[0]:02d}/rgb/{el[1]:04d}.png\", f\"../YOLO/datasets/{folder_names[idx]}/images/{el[0]:02d}_{el[1]:04d}.png\")\n",
@@ -605,11 +567,9 @@
     "        with open(f\"../YOLO/datasets/{folder_names[idx]}/labels/{el[0]:02d}_{el[1]:04d}.txt\", \"w\") as fout:\n",
     "            # bbox is a list of values in the form of [x_center, y_center, width, height] and obj_id a list of class labels\n",
     "            # where each label is in the format 01-15\n",
-    "            content = \"\"\n",
-    "            for object_idx in range(len(obj_id)):\n",
-    "                classCount[index_dict[int(obj_id[object_idx])]] += 1\n",
-    "                total += 1\n",
-    "                content += f\"{index_dict[int(obj_id[object_idx])]} {bbox[object_idx][0]} {bbox[object_idx][1]} {bbox[object_idx][2]} {bbox[object_idx][3]}\\n\"\n",
+    "            classCount[int(obj_id)] += 1\n",
+    "            total += 1\n",
+    "            content = f\"{index_dict[int(obj_id)]} {bbox[0]} {bbox[1]} {bbox[2]} {bbox[3]}\\n\"\n",
     "            fout.write(content)\n",
     "        fout.close()\n",
     "    \n",
@@ -622,7 +582,7 @@
     "sns.lineplot(data=counter_df)\n",
     "plt.xlabel(\"Class\")\n",
     "plt.ylabel(\"Frequency\")\n",
-    "plt.xticks(range(0,number_classes))\n",
+    "plt.xticks(list(index_dict.keys()))\n",
     "plt.savefig(\"../../../images/YOLO_dataset_distribution.png\")\n",
     "plt.show()"
    ]
@@ -670,7 +630,7 @@
     "# Load the ground truth poses from the gt.yml file\n",
     "with open(\"./Linemod_preprocessed/data/02/gt.yml\", 'r') as f:\n",
     "  pose_data = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "pose = pose_data[0][1] # access image 0 (start counting from 0) and get first object in that image (in case of multiple objects)\n",
+    "pose = pose_data[0][1] # access image 0 (start counting from 0) and get second object in that image (in case of multiple objects)\n",
     "\n",
     "bbox = np.array(pose['obj_bb'], dtype=np.float32) #[4]\n",
     "obj_id = np.array(pose['obj_id'], dtype=np.float32) #[1]\n",
