--- a/model.ipynb
+++ b/model.ipynb
@@ -573,14 +573,29 @@
     "    \n",
     "    # store in the dataframe\n",
     "    values = pd.array(list(classCount.values()))/total\n",
-    "    counter_df[folder_names[idx]] = values.copy()\n",
-    "\n",
+    "    counter_df[folder_names[idx]] = values.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c3273181",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# plot distribution of labels in training, validation and test set\n",
-    "plt.grid(alpha=0.5)\n",
-    "sns.lineplot(data=counter_df)\n",
-    "plt.xlabel(\"Class\")\n",
-    "plt.ylabel(\"Frequency\")\n",
-    "plt.xticks(list(index_dict.keys()))\n",
+    "fig, axes = plt.subplots(1,3,figsize=(15,6),sharey=True)\n",
+    "for index, column in enumerate(counter_df.columns):\n",
+    "    axes[index].barh([str(el) for el in index_dict.keys()], counter_df[column],color=\"orange\", edgecolor='gray')\n",
+    "    axes[index].set_title(column.capitalize())\n",
+    "    # add line that represents the uniform distribution of the labels\n",
+    "    axes[index].axvline(x=1/number_classes, color=\"blue\")\n",
+    "    axes[index].text(x=1/number_classes,y=-0.5,s=f\"{1/number_classes: .5f}\", color=\"blue\")\n",
+    "\n",
+    "fig.supxlabel(\"Frequency\")\n",
+    "fig.supylabel(\"Labels\")\n",
+    "plt.subplots_adjust(left=0.07, wspace=0.1)\n",
+    "plt.suptitle(\"Labels Distribution over the Training, Validation and Test sets\")\n",
     "plt.savefig(\"../../../images/YOLO_dataset_distribution.png\")\n",
     "plt.show()"
    ]
