feat: refactor object detection model

--- a/model.ipynb
+++ b/model.ipynb
@@ -125,6 +125,7 @@
     "import open3d as o3d\n",
     "import itertools\n",
     "import shutil\n",
+    "import ultralytics\n",
     "from torch.utils.data import Dataset\n",
     "from torch import nn, optim\n",
     "import torch.nn.functional as F\n",
@@ -647,65 +648,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9fdfdbfc",
+   "id": "03dd3e0f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ultralytics import YOLO\n",
+    "from train_YOLO import train_YOLO\n",
     "\n",
-    "model_path = f\"{path}/checkpoints/yolo11n.pt\"\n",
-    "model = YOLO(model_path)\n",
     "epochs = 50\n",
     "batch_size = 64\n",
-    "IMG_SIZE = 640"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6396f8e1",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03517373",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# model will automatically scale the image and related bounding box according to imgsz\n",
-    "results = model.train(data=f\"{path}/datasets/data.yaml\", epochs=epochs, batch=batch_size, device=device,\n",
-    "        imgsz=IMG_SIZE,\n",
-    "        augment=True,\n",
-    "        flipud=0.5,\n",
-    "        fliplr=0.5,\n",
-    "        hsv_h=0.4,\n",
-    "        hsv_s=0.4,\n",
-    "        hsv_v=0.4,\n",
-    "        degrees=120,\n",
-    "        translate=0.1,\n",
-    "        scale=0.5,\n",
-    "        shear=20,\n",
-    "        perspective=0.0001\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "44c08d2b",
-   "metadata": {},
-   "source": [
-    "Copy model file to ```checkpoints```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2327518a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "shutil.copy(f\"./runs/detect/train/weights/best.pt\", f\"../../../checkpoints/best.pt\")"
+    "IMG_SIZE = 640\n",
+    "\n",
+    "train_YOLO(path, epochs, batch_size, device, IMG_SIZE) # train model and save it to checkpoints"
    ]
   },
   {
@@ -713,52 +666,19 @@
    "id": "459d7a82",
    "metadata": {},
    "source": [
-    "Validate model"
+    "Validate model on test set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b63367c",
+   "id": "a18df963",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_path = \"../../../checkpoints/best.pt\"\n",
-    "model = YOLO(model_path)\n",
-    "results = model.val(\n",
-    "        data=f\"{path}/datasets/data.yaml\",\n",
-    "        epochs=epochs,\n",
-    "        batch=batch_size,\n",
-    "        imgsz=IMG_SIZE,\n",
-    "        device=device\n",
-    "    )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6419a45",
-   "metadata": {},
-   "source": [
-    "Test model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7aa5ba83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model_path = \"../../../checkpoints/best.pt\"\n",
-    "model = YOLO(model_path)\n",
-    "results = model.val(\n",
-    "        data=f\"{path}/datasets/data.yaml\",\n",
-    "        epochs=epochs,\n",
-    "        batch=batch_size,\n",
-    "        imgsz=IMG_SIZE,\n",
-    "        device=device,\n",
-    "        split=\"test\"\n",
-    "    )"
+    "from evaluate_YOLO import evaluate_YOLO\n",
+    "\n",
+    "evaluate_YOLO(path, epochs, batch_size, IMG_SIZE, device)"
    ]
   },
   {
@@ -767,329 +687,6 @@
    "metadata": {},
    "source": [
     "## Pose Estimator Module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e617ad92",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%cd ../"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0155042b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = !pwd\n",
-    "path = path[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f89237a1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm\n",
-    "\n",
-    "os.makedirs(\"./YOLO/datasets_cropped\", exist_ok=True)\n",
-    "\n",
-    "# input: path YOLO/datasets\n",
-    "# output: save images\n",
-    "\n",
-    "def mask_outside_bbox(path=\"./YOLO/datasets\", color=(0, 0, 0)):\n",
-    "\n",
-    "    for folder in os.scandir(path):\n",
-    "        if folder.is_dir():\n",
-    "            os.makedirs(f\"./YOLO/datasets_cropped/{folder.name}\", exist_ok=True)\n",
-    "            path_dir= os.path.join(path, folder.name)\n",
-    "            images_path = os.path.join(path_dir, \"images\")\n",
-    "            labels_path = os.path.join(path_dir, \"labels\")\n",
-    "\n",
-    "            for img_name, label_name in zip(sorted(os.listdir(images_path)), sorted(os.listdir(labels_path))):\n",
-    "                img_path = os.path.join(images_path, img_name)\n",
-    "                label_path = os.path.join(labels_path, label_name)\n",
-    "                img = cv2.imread(img_path)\n",
-    "                \n",
-    "                with open(label_path, \"r\") as f:\n",
-    "                    _, x_center, y_center, w, h = map(float,f.readline().split(\" \"))\n",
-    "                f.close()\n",
-    "                \n",
-    "                img_height, img_width, _ = img.shape\n",
-    "                \n",
-    "                x1 = round((x_center - w / 2) * img_width)\n",
-    "                y1 = round((y_center - h / 2) * img_height)\n",
-    "                x2 = round((x_center + w / 2) * img_width)\n",
-    "                y2 = round((y_center + h / 2) * img_height)\n",
-    "                \n",
-    "                img_masked = np.full_like(img, color)\n",
-    "                img_masked[y1:y2, x1:x2] = img[y1:y2, x1:x2]\n",
-    "                \n",
-    "                cv2.imwrite(f\"./YOLO/datasets_cropped/{folder.name}/{img_name}\",img=img_masked)   \n",
-    "             \n",
-    "mask_outside_bbox()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "4063b816",
-   "metadata": {},
-   "source": [
-    "Copy the gt.yaml and info.yaml"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37c76097",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for el in class_names:\n",
-    "    shutil.copy(f\"./DenseFusion/Linemod_preprocessed/data/{el}/gt.yml\", f\"./YOLO/datasets_cropped/{el}_gt.yml\")\n",
-    "    shutil.copy(f\"./DenseFusion/Linemod_preprocessed/data/{el}/info.yml\", f\"./YOLO/datasets_cropped/{el}_info.yml\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e513d326",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class CustomDatasetPose(Dataset): # used to load and preprocess data\n",
-    "    def __init__(self, dataset_root, split='train'):\n",
-    "        \"\"\"\n",
-    "        Args:\n",
-    "            dataset_root (str): Path to the dataset directory.\n",
-    "            split (str): 'train', 'validation' or 'test'.\n",
-    "        \"\"\"\n",
-    "        self.dataset_root = dataset_root\n",
-    "        if split == \"train\":\n",
-    "            self.split = split\n",
-    "        elif split == \"validation\":\n",
-    "            self.split = \"val\"\n",
-    "        else:\n",
-    "            self.split = \"test\"\n",
-    "\n",
-    "        # Get list of all samples (folder_id, sample_id)\n",
-    "        self.samples = self.get_all_samples()\n",
-    "\n",
-    "        # Check if samples were found\n",
-    "        if not self.samples:\n",
-    "            raise ValueError(f\"No samples found in {self.dataset_root}. Check the dataset path and structure.\")\n",
-    "\n",
-    "        # Define image transformations\n",
-    "        self.transform = transforms.Compose([\n",
-    "            transforms.ToTensor(),\n",
-    "        ])\n",
-    "\n",
-    "    def get_samples_id(self):\n",
-    "        return self.samples\n",
-    "\n",
-    "    def get_all_samples(self):\n",
-    "        \"\"\"Retrieve the list of all available sample indices from all folders.\"\"\"\n",
-    "        for folder in [\"train\",\"val\",\"test\"]:\n",
-    "            if folder == self.split:\n",
-    "                folder_path = os.path.join(self.dataset_root, f\"{folder}\")\n",
-    "                #print(folder_path)\n",
-    "                if os.path.exists(folder_path):\n",
-    "                    # get name of files <folder id>_<image>\n",
-    "                    sample_ids = sorted([f.split('.')[0] for f in os.listdir(folder_path) if f.endswith('.png')])\n",
-    "        return sample_ids\n",
-    "\n",
-    "    #Define here some usefull functions to access the data\n",
-    "    def load_image(self, img_path):\n",
-    "        \"\"\"Load an RGB image and convert to tensor.\"\"\"\n",
-    "        img = Image.open(img_path).convert(\"RGB\")\n",
-    "        return self.transform(img)\n",
-    "\n",
-    "    def load_6d_pose(self, sample_id):\n",
-    "        \"\"\"Load the 6D pose (translation and rotation) for the object in this sample.\"\"\"\n",
-    "        label = int(sample_id.split(\"_\")[0])\n",
-    "        objectId = int(sample_id.split(\"_\")[1])\n",
-    "        pose_file = os.path.join(self.dataset_root, f\"{label:02d}_gt.yml\")\n",
-    "\n",
-    "        # Load the ground truth poses from the gt.yml file\n",
-    "        with open(pose_file, 'r') as f:\n",
-    "            pose_data = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "\n",
-    "        # The pose data is a dictionary where each key corresponds to a frame with pose info\n",
-    "        # We assume sample_id corresponds to the key in pose_data\n",
-    "        if objectId not in pose_data:\n",
-    "            raise KeyError(f\"Sample ID {objectId} not found in {label:02d}_gt.yml.\")\n",
-    "\n",
-    "        for pose in pose_data[objectId]: # There can be more than one pose per sample, but take the one of label=folder_id\n",
-    "            # Extract translation and rotation\n",
-    "            if (int(pose['obj_id']) == int(label)):\n",
-    "                translation = np.array(pose['cam_t_m2c'], dtype=np.float32)  # [3] ---> (x,y,z)\n",
-    "                rotation = np.array(pose['cam_R_m2c'], dtype=np.float32).reshape(3, 3)  # [3x3] ---> rotation matrix\n",
-    "                # bbox is top left corner and width and height info, YOLO needs center coordinates and width and height\n",
-    "                x_min, y_min, width, height = np.array(pose['obj_bb'], dtype=np.float32) # [4] ---> x_min, y_min, width, height\n",
-    "                # compute initial center\n",
-    "                x_center = x_min + width/2\n",
-    "                y_center = y_min + height/2\n",
-    "                \n",
-    "                # store coordinates of the center and width and height of the bounding box normalized to the\n",
-    "                # image width=640 pixels and height=480 pixels\n",
-    "                bbox = np.array([x_center/IMG_WIDTH, y_center/IMG_HEIGHT, width/IMG_WIDTH, height/IMG_HEIGHT], dtype=np.float32)\n",
-    "\n",
-    "                obj_id = np.array(pose['obj_id'], dtype=np.float32) # [1] ---> label\n",
-    "                break\n",
-    "\n",
-    "        return translation, rotation, bbox, obj_id\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        #Return the total number of samples in the selected split.\n",
-    "        return len(self.samples)\n",
-    "\n",
-    "    def __getitem__(self, idx):\n",
-    "        #Load a dataset sample.\n",
-    "        sample = self.samples[idx]\n",
-    "\n",
-    "        img_path = os.path.join(self.dataset_root, f\"{self.split}\", f\"{sample}.png\")\n",
-    "\n",
-    "        img = self.load_image(img_path)\n",
-    "        translation, rotation, bbox, obj_id = self.load_6d_pose(sample)\n",
-    "\n",
-    "        #Dictionary with all the data\n",
-    "        return {\n",
-    "            \"rgb\": img,\n",
-    "            \"translation\": torch.tensor(translation),\n",
-    "            \"rotation\": torch.tensor(rotation),\n",
-    "            \"bbox\": torch.tensor(bbox),\n",
-    "            \"obj_id\": torch.tensor(obj_id),\n",
-    "        }"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cfb22e9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_root_pose = \"./YOLO/datasets_cropped\"\n",
-    "\n",
-    "train_dataset = CustomDatasetPose(dataset_root_pose, split=\"train\")\n",
-    "print(f\"Training samples: {len(train_dataset)}\")\n",
-    "\n",
-    "val_dataset = CustomDatasetPose(dataset_root_pose, split=\"validation\")\n",
-    "print(f\"Validation samples: {len(val_dataset)}\")\n",
-    "\n",
-    "test_dataset = CustomDatasetPose(dataset_root_pose, split=\"test\")\n",
-    "print(f\"Testing samples: {len(test_dataset)}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1aa40cf2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PoseEstimatorQuat6D(nn.Module):\n",
-    "    def __init__(self, backbone_name=\"resnet18\", pretrained=True):\n",
-    "        super(PoseEstimatorQuat6D, self).__init__()\n",
-    "\n",
-    "        # Load backbone (without last fully connected layer)\n",
-    "        backbone = getattr(models, backbone_name)(pretrained=pretrained)\n",
-    "        self.backbone = nn.Sequential(*list(backbone.children())[:-1])\n",
-    "        in_features = backbone.fc.in_features\n",
-    "\n",
-    "        # 7 output (4 quaternion, 3 translation)\n",
-    "        self.fc = nn.Sequential(\n",
-    "            nn.Linear(in_features, 256),\n",
-    "            nn.ReLU(),\n",
-    "            nn.Linear(256, 7)\n",
-    "        )\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        x = self.backbone(x)\n",
-    "        x = torch.flatten(x, 1)\n",
-    "        output = self.fc(x)\n",
-    "\n",
-    "        quat = output[:, :4]\n",
-    "        quat = quat / torch.norm(quat, dim=1, keepdim=True)  # Normalize quaternion\n",
-    "\n",
-    "        trans = output[:, 4:]\n",
-    "        return quat, trans"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "979a7338",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def criterion(outputs, translation, rotation):\n",
-    "    quat, trans = outputs\n",
-    "    # rotation is list of type quaternion, make it tensor of float32 not float64 (double)\n",
-    "    rotation = torch.tensor(np.stack([el.components for el in rotation]).astype(np.float32)).to(device)\n",
-    "    loss_quat = F.mse_loss(quat, rotation)\n",
-    "    loss_trans = F.mse_loss(trans, translation)\n",
-    "\n",
-    "    return loss_quat + loss_trans"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cac57e9d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from torch.optim import Adam\n",
-    "import quaternion\n",
-    "\n",
-    "def train(model, epoch, dataloader, criterion, optimizer=Adam, device=device):\n",
-    "    model.train()\n",
-    "    running_loss = 0.0\n",
-    "\n",
-    "    for batch_idx, data in enumerate(dataloader):\n",
-    "        img, translation, rotation = data[\"rgb\"], data[\"translation\"], data[\"rotation\"]\n",
-    "        img, translation, rotation = img.to(device), translation.to(device), quaternion.from_rotation_matrix(rotation)\n",
-    "\n",
-    "        outputs = model(img)\n",
-    "        loss = criterion(outputs, translation, rotation)\n",
-    "        optimizer.zero_grad()\n",
-    "\n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "\n",
-    "        running_loss += loss.item()\n",
-    "\n",
-    "        if batch_idx % 2 == 0:\n",
-    "            print(f'Train Epoch: {epoch} [{batch_idx * len(data)}/{len(dataloader.dataset)} '\n",
-    "                f'({100. * batch_idx / len(dataloader):.0f}%)]\\t Loss: {loss.item():.6f}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fc88da74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "learning_rate=[0.001]\n",
-    "batch_size=[2]\n",
-    "num_epoch=10\n",
-    "for lr in learning_rate:\n",
-    "    for batch in batch_size:\n",
-    "        train_dataloader = DataLoader(train_dataset, batch_size=batch, shuffle=True)\n",
-    "        val_dataloader = DataLoader(val_dataset, batch_size=batch, shuffle=False)\n",
-    "        model = PoseEstimatorQuat6D().to(device)\n",
-    "        print(model)\n",
-    "        for epoch in range(1, num_epoch):\n",
-    "            train(model, epoch, train_dataloader, criterion, optimizer=Adam(model.parameters(), lr=lr), device=device)"
    ]
   },
   {
