feat: add custom dataset, dataloader, function

--- a/model.ipynb
+++ b/model.ipynb
@@ -172,6 +172,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42ba70be",
+   "metadata": {},
+   "source": [
+    "Set seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8a2a17b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from utils.init import set_seed\n",
+    "\n",
+    "set_seed(42)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b5b752f3",
    "metadata": {},
    "source": [
@@ -185,7 +205,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils.device_setter import set_device\n",
+    "from utils.init import set_device\n",
     "\n",
     "device = set_device()"
    ]
@@ -403,12 +423,13 @@
     "dataset_root = \"./datasets/linemod/DenseFusion/Linemod_preprocessed/\"\n",
     "\n",
     "train_dataset = CustomDatasetPose(dataset_root, split=\"train\", device=device, cam_K = cam_K)\n",
+    "image_mean, image_std = train_dataset.get_image_mean_std()\n",
     "print(f\"Training samples: {len(train_dataset)}\")\n",
     "\n",
-    "val_dataset = CustomDatasetPose(dataset_root, split=\"validation\", device=device, cam_K = cam_K)\n",
+    "val_dataset = CustomDatasetPose(dataset_root, split=\"validation\", device=device, cam_K = cam_K, img_mean = image_mean, img_std = image_std)\n",
     "print(f\"Validation samples: {len(val_dataset)}\")\n",
     "\n",
-    "test_dataset = CustomDatasetPose(dataset_root, split=\"test\", device=device, cam_K = cam_K)\n",
+    "test_dataset = CustomDatasetPose(dataset_root, split=\"test\", device=device, cam_K = cam_K, img_mean = image_mean, img_std = image_std)\n",
     "print(f\"Testing samples: {len(test_dataset)}\")"
    ]
   },
@@ -571,7 +592,7 @@
     "\n",
     "folder = \"02\"\n",
     "object_name = \"0101\"\n",
-    "img = load_depth_image(f\"{path}/datasets/linemod/DenseFusion/Linemod_preprocessed/data/{folder}/depth/{object_name}.png\")"
+    "img = load_depth_image(f\"./datasets/linemod/DenseFusion/Linemod_preprocessed/data/{folder}/depth/{object_name}.png\")"
    ]
   },
   {
@@ -690,158 +711,227 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "465dd03d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models.PosePredictorModel import PosePredictorModel\n",
+    "from PoseEstimationTrainer import PoseEstimationTrainer\n",
+    "from models.ADDMetric import ADDMetric\n",
+    "from utils.pose_plot import plotPose"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84448d57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    \"project_name\": \"baseline_quaternion\",\n",
+    "    \"experiment_name\": \"mse_loss_step_optim\",\n",
+    "    \"batch_size\": 32,\n",
+    "    \"num_epochs\": 25,\n",
+    "    \"learning_rate\": 1e-4,\n",
+    "    \"weight_decay\": 1e-5,\n",
+    "    \"backbone\": \"resnet18\",\n",
+    "    \"hidden_dim\": 512,\n",
+    "    \"img_size\": 224,\n",
+    "    \"alpha\": 1.0,\n",
+    "    \"beta\": 1.0,\n",
+    "    \"add_threshold\": 0.1,\n",
+    "    \"symmetric_objects\": [\"10\"],\n",
+    "    \"name_saved_file\": \"mse_loss_step\"\n",
+    "}\n",
+    "\n",
+    "MODELS_DIR = \"./datasets/linemod/DenseFusion/Linemod_preprocessed/models\"\n",
+    "DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "print(f\"Using device: {DEVICE}\")\n",
+    "print(f\"Configuration: {config}\")\n",
+    "\n",
+    "# Dataloader\n",
+    "train_loader = DataLoader(train_dataset, batch_size=config[\"batch_size\"], shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=config[\"batch_size\"], shuffle=False)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=config[\"batch_size\"], shuffle=False)\n",
+    "\n",
+    "\n",
+    "# # --------------------------\n",
+    "# from torch.utils.data import DataLoader, Subset\n",
+    "\n",
+    "# # Number of samples in subset\n",
+    "# subset_size = 10\n",
+    "# subset_indices = list(range(subset_size))\n",
+    "\n",
+    "# # create subset of original dataset\n",
+    "# train_subset = Subset(train_loader.dataset, subset_indices)\n",
+    "# val_subset = Subset(val_loader.dataset, subset_indices)\n",
+    "# test_subset = Subset(test_loader.dataset, subset_indices)\n",
+    "\n",
+    "# # create new DataLoader from subset\n",
+    "# train_loader = DataLoader(train_subset, batch_size=config[\"batch_size\"], shuffle=True)\n",
+    "# val_loader = DataLoader(val_subset, batch_size=config[\"batch_size\"], shuffle=False)\n",
+    "# test_loader = DataLoader(test_subset, batch_size=config[\"batch_size\"], shuffle=False)\n",
+    "# # ----------------------\n",
+    "\n",
+    "\n",
+    "# Model\n",
+    "model = PosePredictorModel(\n",
+    "    backbone=config[\"backbone\"],\n",
+    "    hidden_dim=config[\"hidden_dim\"]\n",
+    ").to(device)\n",
+    "\n",
+    "total_params = sum(p.numel() for p in model.parameters())\n",
+    "trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"Total parameters: {total_params:,}\")\n",
+    "print(f\"Trainable parameters: {trainable_params:,}\")\n",
+    "\n",
+    "experiment = comet_ml.start(\n",
+    "    api_key=\"<YOUR_API>\",\n",
+    "    project_name=config['project_name'],\n",
+    "    experiment_config=comet_ml.ExperimentConfig(\n",
+    "        name=config[\"experiment_name\"],\n",
+    "        parse_args=False)\n",
+    ")\n",
+    "\n",
+    "experiment.log_parameters(config)\n",
+    "\n",
+    "trainer = PoseEstimationTrainer(model, train_loader, val_loader, device=device, config=config, experiment=experiment)\n",
+    "trainer.train(num_epochs=config[\"num_epochs\"])\n",
+    "\n",
+    "checkpoint = torch.load(f\"{path}/checkpoints/baseline/{config['name_saved_file']}_{config['backbone']}_bs{config['batch_size']}.pth\", map_location=device)\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "model.eval()\n",
+    "\n",
+    "add_metric = ADDMetric(\n",
+    "    model=model,\n",
+    "    class_names=class_names,\n",
+    "    test_loader=test_loader,\n",
+    "    models_3D_dir=MODELS_DIR,\n",
+    "    symmetric_objects=config[\"symmetric_objects\"],\n",
+    "    device=DEVICE,\n",
+    "    experiment=experiment,\n",
+    "    config=config\n",
+    ")\n",
+    "\n",
+    "print(\"Evaluating with ADD metric...\")\n",
+    "add_score, accuracy, detailed_results = add_metric.evaluate_model_with_add()\n",
+    "\n",
+    "\n",
+    "print(f\"\\nFinal Results:\\nADD Score: {add_score:.4f}\\nAccuracy: {accuracy:.4f}\")\n",
+    "\n",
+    "test_batch = next(iter(test_loader))\n",
+    "\n",
+    "for idx, batch in enumerate(test_loader):\n",
+    "    images = batch['rgb'].to(device)\n",
+    "    gt_trans = batch['translation']\n",
+    "    gt_rot = batch['rotation']\n",
+    "    object_ids = batch['obj_id']\n",
+    "    sample_id = batch[\"sample_id\"]\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        pred_trans, pred_rot = model(images)\n",
+    "        pred_trans = pred_trans\n",
+    "        pred_rot = pred_rot\n",
+    "       \n",
+    "        for i in range(len(images)):\n",
+    "            if i == 0:\n",
+    "                img_path = f\"{path}/datasets/linemod/DenseFusion/Linemod_preprocessed/data/{sample_id[i][0]:02d}/rgb/{sample_id[i][1]:04d}.png\"\n",
+    "\n",
+    "                plotPose(img_path, gt_trans[i], gt_rot[i], pred_trans[i], pred_rot[i], experiment, cam_K)\n",
+    "print(f\"Plot saved on comet_ml in project: {config['project_name']}, experiment: {config['experiment_name']}\")\n",
+    "\n",
+    "experiment.end()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "b22f1857",
+   "id": "218dd776",
    "metadata": {},
    "source": [
-    "Plot"
+    "## Extension"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3463ed4",
+   "metadata": {},
+   "source": [
+    "Compare images in ```rgb``` and ```mask``` and analyze if there are images that are only in one of the folders"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106ab404",
+   "id": "fb4215cd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import quaternion\n",
-    "import trimesh"
+    "from utils.data_exploration import compare_rgb_mask_in_data\n",
+    "\n",
+    "compare_rgb_mask_in_data(\"./datasets/linemod/DenseFusion/Linemod_preprocessed/data/\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "573ff0bd",
+   "metadata": {},
+   "source": [
+    "Create dataset"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ed985b6",
+   "id": "741495dd",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plotPose(pathImage, translation_gt, rotation_gt, translation_pred, rotation_pred):\n",
-    "    '''\n",
-    "        Input:\n",
-    "            path for image (in DenseFusion)\n",
-    "            ground truth translation tensor (in millimeters)\n",
-    "            ground truth rotation tensor (either matrix or quaternion)\n",
-    "            predicted translation tensor (in millimeters)\n",
-    "            predicted rotation tensor (either matrix or quaternion)\n",
-    "    '''\n",
+    "from data.CustomDataset import CustomDataset\n",
     "\n",
-    "    # read image\n",
-    "    image = cv2.imread(pathImage)\n",
-    "    transparent_image = image.copy() # copy of the image to work on a transparent image (for the second reference system)\n",
+    "dataset_root = \"./datasets/linemod/DenseFusion/Linemod_preprocessed/\"\n",
     "\n",
-    "    # read translation and rotation\n",
-    "    rotat_gt = rotation_gt.numpy() # transform tensor to numpy array\n",
-    "    trans_gt = translation_gt.numpy()/1000 # in meters\n",
-    "    rotat_pred = rotation_pred.numpy()\n",
-    "    trans_pred = translation_pred.numpy()/1000\n",
+    "train_dataset = CustomDataset(dataset_root, split='train', device=device, cam_K=cam_K)\n",
+    "image_mean, image_std = train_dataset.get_image_mean_std()\n",
+    "print(f'Training samples: {len(train_dataset)}')\n",
     "\n",
-    "    # read camera intrinsics\n",
-    "    label = pathImage.split(\"/\")[-1].split(\".\")[0].split(\"_\")[0]\n",
-    "    image_id = pathImage.split(\"/\")[-1].split(\".\")[0].split(\"_\")[1]\n",
-    "    with open(f\"./YOLO/datasets_cropped/{label}_info.yml\", 'r') as f:\n",
-    "            camera_info = yaml.load(f, Loader=yaml.FullLoader)\n",
-    "    camera_intrinsics = np.array(camera_info[int(image_id)][\"cam_K\"]).reshape(3,3)\n",
+    "val_dataset = CustomDataset(dataset_root, split='validation', device=device, cam_K = cam_K, img_mean = image_mean, img_std = image_std)\n",
+    "print(f'Validation samples: {len(val_dataset)}')\n",
     "\n",
-    "    # read 3D model\n",
-    "    meshModel = trimesh.load(f\"./DenseFusion/Linemod_preprocessed/models/obj_{label}.ply\")\n",
-    "    vertices = meshModel.vertices/1000 # it has 3 columns, for X, Y, Z, use unit of measurement of translation\n",
-    "    # compute corners\n",
-    "    min_corner = vertices.min(axis=0) # find for each column the smallest value\n",
-    "    max_corner = vertices.max(axis=0)\n",
-    "    \n",
-    "    bounding_box_3d = np.array([[min_corner[0], min_corner[1], min_corner[2]],\n",
-    "                                [max_corner[0], min_corner[1], min_corner[2]],\n",
-    "                                [max_corner[0], max_corner[1], min_corner[2]],\n",
-    "                                [min_corner[0], max_corner[1], min_corner[2]],\n",
-    "                                [min_corner[0], min_corner[1], max_corner[2]],\n",
-    "                                [max_corner[0], min_corner[1], max_corner[2]],\n",
-    "                                [max_corner[0], max_corner[1], max_corner[2]],\n",
-    "                                [min_corner[0], max_corner[1], max_corner[2]],])\n",
-    "\n",
-    "    # convert quaternion to rotation matrix, if input was quaternion\n",
-    "    if rotat_gt.size == 4:\n",
-    "        rotat_gt = quaternion.as_rotation_matrix(np.quaternion(*rotat_gt))\n",
-    "    else:\n",
-    "        rotat_gt = rotat_gt.reshape(3,3)\n",
-    "    if rotat_pred.size == 4:\n",
-    "        rotat_pred = quaternion.as_rotation_matrix(np.quaternion(*rotat_pred))\n",
-    "    else:\n",
-    "        rotat_pred = rotat_pred.reshape(3,3)\n",
-    "\n",
-    "    # build 3D axes according to object coordinate system, same unit of measurement of translation, so in meters\n",
-    "    axes_3d = np.array([\n",
-    "        [0, 0, 0],      # origin, in the object coordinate system\n",
-    "        [0.15, 0, 0],   # how long the arrow should be in the X coordinate\n",
-    "        [0, 0.15, 0],   # how long the arrow should be in the Y coordinate\n",
-    "        [0, 0, 0.15]    # how long the arrow should be in the Z coordinate\n",
-    "    ])\n",
-    "\n",
-    "    # transform the object coordinate system to the camera coordinate system\n",
-    "    # rotat_gt is 3x3, so axes_3d has to be transposed, then add to origin, and coordinates the translation\n",
-    "    axes_cam_gt = (rotat_gt @ axes_3d.T).T + trans_gt\n",
-    "    # bounding box\n",
-    "    bounding_box_3d_cam_gt = (rotat_gt @ bounding_box_3d.T).T + trans_gt\n",
-    "    # project 3D axes to 2D\n",
-    "    axes_2d_gt = (camera_intrinsics @ axes_cam_gt.T).T # camera_intrinsics is 3x3, while axes_cam_gt 4x3, axes_2d_gt 4x3\n",
-    "    axes_2d_gt = axes_2d_gt[:, :2] / axes_2d_gt[:, 2:3] # take first 2 columns and normalize by depth\n",
-    "    # bounding box\n",
-    "    bounding_box_2d_gt = (camera_intrinsics @ bounding_box_3d_cam_gt.T).T\n",
-    "    bounding_box_2d_gt = (bounding_box_2d_gt[:, :2] / bounding_box_2d_gt[:, 2:3]).astype(int)\n",
-    "    # get point coordinates\n",
-    "    p_gt = [tuple(el) for el in bounding_box_2d_gt]\n",
-    "    # define edges using two points, access with index\n",
-    "    edges = [(0,1), (1,2), (2,3), (3,0), # bottom\n",
-    "             (0,4), (1,5), (2,6), (3,7), # vertical\n",
-    "             (4,5), (5,6), (6,7), (7,4) # top\n",
-    "             ]\n",
-    "    # draw edges\n",
-    "    for el in edges:\n",
-    "        cv2.line(image, p_gt[el[0]], p_gt[el[1]], (0,0,255), 5)\n",
-    "\n",
-    "    p0_gt = tuple(axes_2d_gt[0].astype(int)) # take origin coordinates\n",
-    "    p1_gt = tuple(axes_2d_gt[1].astype(int))\n",
-    "    p2_gt = tuple(axes_2d_gt[2].astype(int))\n",
-    "    p3_gt = tuple(axes_2d_gt[3].astype(int))\n",
-    "\n",
-    "    # color is in BGR format, set tickness=2\n",
-    "    cv2.arrowedLine(image, p0_gt, p1_gt, (0, 0, 255), 2) # X is red\n",
-    "    cv2.arrowedLine(image, p0_gt, p2_gt, (0, 255, 0), 2) # Y is green\n",
-    "    cv2.arrowedLine(image, p0_gt, p3_gt, (255, 0, 0), 2) # Z is blue\n",
-    "\n",
-    "    # for predicted\n",
-    "    axes_cam_pred = (rotat_pred @ axes_3d.T).T + trans_pred\n",
-    "    bounding_box_3d_cam_pred = (rotat_pred @ bounding_box_3d.T).T + trans_pred\n",
-    "\n",
-    "    axes_2d_pred = (camera_intrinsics @ axes_cam_pred.T).T\n",
-    "    axes_2d_pred = axes_2d_pred[:, :2] / axes_2d_pred[:, 2:3]\n",
-    "    bounding_box_2d_pred = (camera_intrinsics @ bounding_box_3d_cam_pred.T).T\n",
-    "    bounding_box_2d_pred = (bounding_box_2d_pred[:, :2] / bounding_box_2d_pred[:, 2:3]).astype(int)\n",
-    "\n",
-    "    p_pred = [tuple(el) for el in bounding_box_2d_pred]\n",
-    "    edges = [(0,1), (1,2), (2,3), (3,0), # bottom\n",
-    "             (0,4), (1,5), (2,6), (3,7), # vertical\n",
-    "             (4,5), (5,6), (6,7), (7,4) # top\n",
-    "             ]\n",
-    "    for el in edges:\n",
-    "        cv2.line(image, p_pred[el[0]], p_pred[el[1]], (255,0,0), 5)\n",
-    "\n",
-    "    p0_pred = tuple(axes_2d_pred[0].astype(int))\n",
-    "    p1_pred = tuple(axes_2d_pred[1].astype(int))\n",
-    "    p2_pred = tuple(axes_2d_pred[2].astype(int))\n",
-    "    p3_pred = tuple(axes_2d_pred[3].astype(int))\n",
-    "\n",
-    "    cv2.arrowedLine(transparent_image, p0_pred, p1_pred, (0, 0, 255), 2)\n",
-    "    cv2.arrowedLine(transparent_image, p0_pred, p2_pred, (0, 255, 0), 2)\n",
-    "    cv2.arrowedLine(transparent_image, p0_pred, p3_pred, (255, 0, 0), 2)\n",
-    "\n",
-    "    # show image after merging the two images\n",
-    "    overlapImage = cv2.addWeighted(transparent_image, 0.5, image, 1, 0)\n",
-    "    plt.imshow(cv2.cvtColor(overlapImage, cv2.COLOR_BGR2RGB))\n",
-    "    plt.title(\"Object Pose Estimation (prediction is transparent)\")\n",
-    "    plt.show()\n",
-    "\n",
-    "    return"
+    "test_dataset = CustomDataset(dataset_root, split='test', device=device, cam_K = cam_K, img_mean = image_mean, img_std = image_std)\n",
+    "print(f'Testing samples: {len(test_dataset)}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2427a65",
+   "metadata": {},
+   "source": [
+    "Get dataloader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af010d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.CustomDataLoader import pointcloud_collate_fn\n",
+    "\n",
+    "train_loader = DataLoader(train_dataset, batch_size=16, shuffle=True, collate_fn=pointcloud_collate_fn)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=16, shuffle=False, collate_fn=pointcloud_collate_fn)\n",
+    "test_loader = DataLoader(test_dataset, batch_size=16, shuffle=False, collate_fn=pointcloud_collate_fn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9923e6a1",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
