feat: add extension, minor changes

--- a/model.ipynb
+++ b/model.ipynb
@@ -929,9 +929,118 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9923e6a1",
+   "id": "ee8e5c80",
    "metadata": {},
-   "source": []
+   "source": [
+    "Train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cce36f2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from models.PoseEstimationPipeline import PoseEstimationPipeline\n",
+    "from PoseTrainer import PoseTrainer\n",
+    "from models.PoseLossExtension import PoseLossExtension\n",
+    "from models.ADDMetricExtension import ADDMetricExtension"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "882640ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "config = {\n",
+    "    \"project_name\": \"pointnet\",\n",
+    "    \"experiment_name\": \"densefusion_add_loss\",\n",
+    "    \"batch_size\": 16,\n",
+    "    \"num_epochs\": 20,\n",
+    "    \"learning_rate\": 1e-4,\n",
+    "    \"weight_decay\": 1e-5,\n",
+    "    \"backbone\": \"resnet18\",\n",
+    "    \"hidden_dim\": 512,\n",
+    "    \"img_size\": 224,\n",
+    "    \"alpha\": 1.0,\n",
+    "    \"beta\": 1.0,\n",
+    "    \"add_threshold\": 0.1,\n",
+    "    \"symmetric_objects\": [\"10\"],\n",
+    "    \"name_saved_file\": \"densefusion_add_loss\",\n",
+    "    \"geometric_dims\" : [64,128,256],\n",
+    "    \"fusion_dim\" : 128\n",
+    "}\n",
+    "\n",
+    "MODELS_DIR = \"./datasets/linemod/DenseFusion/Linemod_preprocessed/models\"\n",
+    "\n",
+    "print(f\"Using device: {device}\")\n",
+    "print(f\"Configuration: {config}\")\n",
+    "\n",
+    "# model\n",
+    "model = PoseEstimationPipeline(fx=cam_K[0],fy=cam_K[4],cx=cam_K[2],cy=cam_K[5]).to(device)\n",
+    "\n",
+    "total_params = sum(p.numel() for p in model.parameters())\n",
+    "trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"Total parameters: {total_params:,}\")\n",
+    "print(f\"Trainable parameters: {trainable_params:,}\")\n",
+    "\n",
+    "experiment = comet_ml.start(\n",
+    "    api_key=\"<YOUR_API>\",\n",
+    "    project_name=config['project_name'],\n",
+    "    experiment_config=comet_ml.ExperimentConfig(\n",
+    "        name=config[\"experiment_name\"],\n",
+    "        parse_args=False)\n",
+    ")\n",
+    "\n",
+    "experiment.log_parameters(config)\n",
+    "\n",
+    "trainer = PoseTrainer(model, class_names, train_loader, val_loader, device=device, config=config, experiment= experiment)\n",
+    "trainer.train(num_epochs=config[\"num_epochs\"])\n",
+    "\n",
+    "checkpoint = torch.load(f\"./checkpoints/extension/{config['name_saved_file']}_{config['backbone']}_bs{config['batch_size']}.pth\", map_location=device)\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "model.eval()\n",
+    "\n",
+    "add_metric = ADDMetricExtension(\n",
+    "    model=model,\n",
+    "    class_names=class_names,\n",
+    "    test_loader=test_loader,\n",
+    "    models_3D_dir=MODELS_DIR,\n",
+    "    symmetric_objects=config[\"symmetric_objects\"],\n",
+    "    device=device,\n",
+    "    experiment= experiment,\n",
+    "    config=config\n",
+    ")\n",
+    "\n",
+    "print(\"Evaluating with ADD metric...\")\n",
+    "add_score, accuracy, detailed_results = add_metric.evaluate_model_with_add()\n",
+    "\n",
+    "print(f\"\\nFinal Results:\\nADD Score: {add_score:.4f}\\nAccuracy: {accuracy:.4f}\")\n",
+    "\n",
+    "test_batch = next(iter(test_loader))\n",
+    "criterion = PoseLossExtension(class_names=class_names,device=device)\n",
+    "\n",
+    "for idx, batch in enumerate(test_loader):\n",
+    "    gt_trans = batch['translation']\n",
+    "    gt_rot = batch['rotation']\n",
+    "    object_ids = batch['obj_id']\n",
+    "    sample_id = batch[\"sample_id\"]\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        pixel_rotations_norm, pixel_translations, pixel_confidences = model(batch)\n",
+    "        loss, r, t = criterion(pixel_rotations_norm, pixel_translations, pixel_confidences, gt_trans, gt_rot, object_ids)\n",
+    "\n",
+    "        for i in range(len(object_ids)):\n",
+    "            if i == 0:\n",
+    "                img_path = f\"./datasets/linemod/DenseFusion/Linemod_preprocessed/data/{sample_id[i][0]:02d}/rgb/{sample_id[i][1]:04d}.png\"\n",
+    "                plotPose(img_path, gt_trans[i], gt_rot[i], t[i], r[i], experiment=experiment)\n",
+    "print(f\"Plot saved on comet_ml in project: {config['project_name']}, experiment: {config['experiment_name']}\")\n",
+    "\n",
+    "experiment.end()"
+   ]
   }
  ],
  "metadata": {
